--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "jquery": "^3.2.1",
