--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "garage-app",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "app.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "production && ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -36,11 +38,11 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "@angular/cli": "1.4.4",
+    "@angular/compiler-cli": "^4.2.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.4",
-    "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
