--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "e2e": "ng e2e",
     "postinstall": "production && ng build --aot -prod"
   },
+  "engines": {
+    "node": "~8.9.3",
+    "npm": "~5.5.1"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
