--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "postinstall": "ng build --aot -prod"
   },
   "engines": {
-    "node": "~8.9.3",
-    "npm": "~5.5.1"
+    "node": "8.9.3",
+    "npm": "5.5.1"
   },
   "private": true,
   "dependencies": {
