--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "garage-app",
   "version": "0.0.0",
   "license": "MIT",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
