--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "server.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
   },
   "engines": {
     "node": "8.9.3",
