--- a/package.json
+++ b/package.json
@@ -2,18 +2,13 @@
   "name": "garage-app",
   "version": "0.0.0",
   "license": "MIT",
-  "main": "server.js",
   "scripts": {
     "ng": "ng",
-    "start": "node server",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-  },
-  "engines": {
-    "node": "8.9.3",
-    "npm": "5.5.1"
   },
   "private": true,
   "dependencies": {
