--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "8.9.3",
+    "npm": "5.5.1"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
